@@ -1,20 +1,31 @@
-ve
-celerybeat-schedule
-*.db
-*.pyc
-*.iml
-.idea/
-*~
-migrations
+*.py[cod]
+# C extensions
+*.so
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+# Installer logs
+pip-log.txt
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+# Translations
+*.mo
+# Mr Developer
+.mr.developer.cfg
 .project
 .pydevproject
-.settings/
-change_log.txt
-test/
-local_settings.py
-download/
-closure-library/
-config-enable/
-site_media/
-#fixtures/
-tools/
+*~
